--- a/style.css
+++ b/style.css
@@ -116,3 +116,28 @@ button{
 }
 
 
+@media screen and (max-width:426px){
+    html{
+        font-size: 14px;
+    }
+    .form-box{
+        height: 450px;
+        width: 350px;
+    }
+    .input-box{
+        width: 300px;
+        height: 70px;
+    }
+
+    .input-holder{
+        width: 295px;
+    }
+    .input-box label,.input-box input{
+        width: 270px;
+    }
+
+    .declaration-box{
+        width: 300px;
+    }
+
+}
